<?xml version="1.0"?>
<package format="3">
  <name>amr_gui</name>
  <version>0.0.0</version>
  <description>AMR 식당 로봇 GUI</description>
  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>PyQt5</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
