<?xml version="1.0"?>
<package format="3">
  <name>kitchen_gui</name>
  <version>0.0.0</version>
  <description>Kitchen GUI package for ROS 2 Humble</description>
  <maintainer email="ssm06081@naver.com">rokey</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>kitchen_interfaces</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
