<?xml version="1.0"?>
<package format="3">
  <name>kitchen_gui</name>
  <version>0.0.1</version>
  <description>Kitchen GUI package using ROS 2 services</description>
  <maintainer email="ssm06081@naver.com">rokey</maintainer>
  <license>MIT</license>

  <!-- Buildtool dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclpy</build_depend>
  <build_depend>PyQt5</build_depend>
  <build_depend>custom_interface</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>action_msgs</build_depend>
  <build_depend>nav2_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>PyQt5</exec_depend>
  <exec_depend>custom_interface</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <depend>cv_bridge</depend>

  <!-- System dependencies (handled outside ROS) -->
  <!-- For SQLite3, ensure it's installed via your OS package manager -->
  <!-- Example for Ubuntu:
       sudo apt-get install sqlite3 libsqlite3-dev
  -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
