<?xml version="1.0"?>
<package format="3">
  <name>robot_services</name>
  <version>0.0.0</version>
  <description>공통 서비스 정의 패키지</description>
  <maintainer email="100rudtjs@naver.com">rokey</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>ament_python</build_depend>

  <export>
    <rosidl_interface_packages />
    <member_of_group>rosidl_interface_packages</member_of_group>
    <build_type>ament_cmake</build_type>
  </export>
</package>
