[metadata]
name = robot_services
version = 0.0.0
description = 공통 서비스 정의 패키지
author = Your Name
author_email = you@example.com
license = Apache License 2.0

[options]
packages = find:
install_requires =
    setuptools
    rclpy
    std_msgs

# [options.extras_require]
# tests_require =
#     pytest
