<!-- package.xml -->

<?xml version="1.0"?>
<package format="2">
  <name>user_gui</name>
  <version>0.0.0</version>
  <description>Restaurant Robot GUI</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>rosidl_default_generators</depend>
  <depend>PyQt5</depend>
  <depend>robot_services</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
