<?xml version="1.0"?>
<package format="3">
  <name>user_gui</name>
  <version>0.0.1</version>
  <description>Restaurant Service Robot GUI</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>PyQt5</depend>
  <depend>ament_index_python</depend>

  <exec_depend>python3-pyqt5</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
