<?xml version="1.0"?>
<package format="3">
  <name>user_gui</name>
  <version>0.0.1</version>
  <description>Restaurant Service Robot GUI</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>PyQt5</build_depend>
  <build_depend>ament_index_python</build_depend>
  <build_depend>custom_interface</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>PyQt5</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>custom_interface</exec_depend>

  <exec_depend>python3-pyqt5</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
