<?xml version="1.0"?>
<package format="3">
  <name>kitchen_gui</name>
  <version>0.0.1</version>
  <description>Kitchen GUI package using ROS 2 services</description>
  <maintainer email="ssm06081@naver.com">rokey</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclpy</build_depend>
  <build_depend>PyQt5</build_depend>
  <build_depend>custom_interface</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>PyQt5</exec_depend>
  <exec_depend>custom_interface</exec_depend>

  <exec_depend>python3-pyqt5</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
