<?xml version="1.0"?>
<package format="3">
  <name>pyqt_sql_node_test</name>
  <version>0.0.0</version>
  <description>PyQt5 GUI node for ROS2</description>
  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
